--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "google-translate-api",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "A free and unlimited API for Google Translate",
   "main": "index.js",
   "scripts": {
@@ -37,12 +37,13 @@
   "dependencies": {
     "configstore": "^2.0.0",
     "google-translate-token": "github:ZyC0R3/google-translate-token",
-    "got": "^6.3.0"
+    "got": "^9.6.0"
   },
   "devDependencies": {
     "ava": "^2.2.0",
     "codecov": "^1.0.1",
     "coveralls": "^3.0.5",
+    "husky": "^3.0.4",
     "nyc": "^14.1.1",
     "xo": "^0.16.0"
   },
