--- a/package.json
+++ b/package.json
@@ -35,19 +35,21 @@
   },
   "homepage": "https://github.com/ZyC0R3/google-translate-api#readme",
   "dependencies": {
-    "configstore": "^2.0.0",
-    "google-translate-token": "github:ZyC0R3/google-translate-token",
+    "configstore": "^5.0.1",
     "got": "^9.6.0"
   },
   "devDependencies": {
-    "ava": "^2.4.0",
+    "ava": "^3.13.0",
     "codecov": "^1.0.1",
-    "coveralls": "^3.0.11",
-    "husky": "^3.1.0",
-    "nyc": "^14.1.1",
-    "xo": "~0.16.0"
+    "coveralls": "^2.11.11",
+    "husky": "^3.0.4",
+    "nyc": "^15.1.0",
+    "xo": "^0.16.0"
   },
   "xo": {
-    "space": 4
+    "space": 4,
+    "parserOptions": {
+      "ecmaScript": 7
+    }
   }
 }
