--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "google-translate-api",
-  "version": "3.0.5",
+  "name": "@vitalets/google-translate-api",
+  "version": "4.0.0",
   "description": "A free and unlimited API for Google Translate",
   "main": "index.js",
   "scripts": {
@@ -11,9 +11,15 @@
     "release-patch": "VER=patch npm run release",
     "release-minor": "VER=minor npm run release"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "xo",
+      "pre-push": "npm test"
+    }
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ZyC0R3/google-translate-api.git"
+    "url": "https://github.com/vitalets/google-translate-api.git"
   },
   "keywords": [
     "translate",
@@ -31,23 +37,25 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ZyC0R3/google-translate-api/issues"
+    "url": "https://github.com/vitalets/google-translate-api/issues"
   },
-  "homepage": "https://github.com/ZyC0R3/google-translate-api#readme",
+  "homepage": "https://github.com/vitalets/google-translate-api#readme",
   "dependencies": {
-    "configstore": "^2.0.0",
-    "google-translate-token": "github:ZyC0R3/google-translate-token",
+    "configstore": "^5.0.1",
     "got": "^9.6.0"
   },
   "devDependencies": {
-    "ava": "^2.4.0",
-    "codecov": "^3.6.5",
-    "coveralls": "^3.0.11",
-    "husky": "^3.1.0",
-    "nyc": "^14.1.1",
+    "ava": "^3.13.0",
+    "codecov": "^1.0.1",
+    "coveralls": "^2.11.11",
+    "husky": "^3.0.4",
+    "nyc": "^15.1.0",
     "xo": "^0.16.0"
   },
   "xo": {
-    "space": 4
+    "space": 4,
+    "parserOptions": {
+      "ecmaScript": 7
+    }
   }
 }
