--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "google-translate-api",
+  "name": "rita-google-translate-api",
   "version": "3.0.10",
   "description": "A free and unlimited API for Google Translate",
   "main": "index.js",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ZyC0R3/google-translate-api.git"
+    "url": "https://github.com/RitaBot-Project/google-translate-api"
   },
   "keywords": [
     "translate",
@@ -31,9 +31,9 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ZyC0R3/google-translate-api/issues"
+    "url": "https://github.com/RitaBot-Project/google-translate-api/issues"
   },
-  "homepage": "https://github.com/ZyC0R3/google-translate-api#readme",
+  "homepage": "https://github.com/RitaBot-Project/google-translate-api#readme",
   "dependencies": {
     "configstore": "^5.0.1",
     "got": "^9.6.0"
